# 1942-Arcade-Game

./: .gitignore  CMakeLists.txt  README.md  TODO.md  naming.txt  to_do_list.txt  vcpkg.json
.github/workflows/: cmake.yml  codeql-analysis.yml  codeql.yml  deploy-pages.yml  deploy-web.yml  deploy-windows.yml
docs/: conventions.txt
includes/: Animation.h  AnimationFilm.hpp  AnimationFilmHolder.hpp  AnimationHolder.h  Animator.h  AnimatorHolder.h  Background.hpp  CollisionChecker.hpp  EnemyFighter.hpp  FrameListAnimation.h  Game.hpp  LatelyDestroyable.h  MovingAnimation.h  MovingAnimator.h  MovingPathAnimation.h  MovingPathAnimator.h  PowerUp.hpp  SoundHolder.hpp  Sprite.hpp  SpriteAlphaNum.hpp  SpriteString.hpp  SpriteStringHolder.hpp  SpritesHolder.hpp  SuperAce.h  TickAnimation.h  TimerTickAnimator.h  includes.h
libs/SDL2_image-2.0.5/: sdl2_image-config.cmake
libs/SDL2_image-2.0.5/include/: SDL_image.h
libs/SDL2_mixer-2.0.4/: sdl2_mixer-config.cmake
libs/SDL2_mixer-2.0.4/include/: SDL_mixer.h
resources/config/: animators.json  cycleAnimations.json  sprites.json
src/: Animation.h  AnimationFilm.cpp  AnimationFilm.hpp  AnimationFilmHolder.cpp  AnimationFilmHolder.hpp  AnimationHolder.cpp  AnimationHolder.h  Animator.cpp  Animator.h  AnimatorHolder.cpp  AnimatorHolder.h  Background.cpp  Background.hpp  CollisionChecker.cpp  CollisionChecker.hpp  CollisionHandler.cpp  CollisionHandler.hpp  CollisionHolder.cpp  EnemyFighter.hpp  FrameListAnimation.cpp  FrameListAnimation.h  Game.cpp  Game.hpp  LatelyDestroyable.cpp  LatelyDestroyable.h  MovingAnimation.h  MovingAnimator.cpp  MovingAnimator.h  MovingPathAnimation.h  MovingPathAnimator.cpp  MovingPathAnimator.h  OnCleanup.cpp  OnEvent.cpp  OnInit.cpp  OnLoop.cpp  OnRender.cpp  PowerUp.cpp  PowerUp.hpp  SoundHolder.cpp  SoundHolder.hpp  (+27 more)
web/: CMakeLists.txt  README.md  build-direct.bat  build.bat  build.sh  shell.html
